--- a/package.json
+++ b/package.json
@@ -1,24 +1,36 @@
 {
-  "name": "castle",
+  "name": "antique",
   "version": "1.0.0",
-  "description": "animated project",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "",
+  "main": "gulpfile.js",
+  "dependencies": {
+    "eslint-cli": "^1.1.1",
+    "gulp": "^4.0.2"
   },
-  "author": "stradiuarius",
-  "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.26.7",
-    "gulp": "^4.0.2",
+    "browser-sync": "^2.26.10",
+    "eslint": "^7.5.0",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-uglify": "^3.0.2",
-    "normalize.css": "^8.0.1"
-  },
-  "dependencies": {
     "magnific-popup": "^1.1.0",
+    "node-sass": "^4.14.1",
+    "normalize.css": "^8.0.1",
     "slick-carousel": "^1.8.1"
-  }
+  },
+  "scripts": {
+    "compile:sass": "node-sass -o sass/style.scss css/style.comp.css",
+    "prefix:css": "postcss --use autoprefixer -b \"last 10 version\" css/style.concat.css -o css/style.prefix.css"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/stradiuarius/antique.git"
+  },
+  "author": "stradiuarius",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/stradiuarius/antique/issues"
+  },
+  "homepage": "https://github.com/stradiuarius/antique#readme"
 }
